Fix for add to collection visibility issue
#Fixed
- Fixed: Fixed a bug where users couldn't select a collection when they had a lot of them.

--- a/UI/Web/src/app/cards/_modals/bulk-add-to-collection/bulk-add-to-collection.component.scss
+++ b/UI/Web/src/app/cards/_modals/bulk-add-to-collection/bulk-add-to-collection.component.scss
@@ -5,3 +5,16 @@
 .clickable:hover, .clickable:focus {
     background-color: lightgreen;
 }
+
+#add-to-collection {
+    overflow: auto;
+    .modal-body {
+    height: calc(100vh - 206px);
+    min-height: 150px;
+        .list-group {
+            overflow: auto;
+            height: calc(100vh - 325px);
+            min-height: 32px;
+        }
+    }
+}
